<resources>
    <string name="app_name">Opentus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <string name="Name">Name</string>
    <string name="Email">E-mail</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="LeadSource">Lead Source</string>
    <string name="LeadStatus">Lead Status</string>
    <string name="InterestIn">Interested In</string>
    <string name="StatusName">Activity Status</string>
    <string name="ActivityType">Activity Type</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="StartTime">Start Time</string>
    <string name="DurationTime">Duration Time</string>
    <string name="Status"> Lead Status</string>
    <string name="Priority">Priority</string>
    <string name="Activity">Activity</string>
    <string name="Type">Type</string>
    <string name="AssignedTo">Assigned To</string>
    <string name="TimeSpent">Time Spent</string>
    <string name="caseStartDate">Start Date</string>
    <string name="caseEndDate">End Date</string>
    <string name="Title">Title</string>
    <string name="LeadStage">Lead Stage</string>
    <string name="Annualrevenue">Annual revenue</string>
    <string name="BusinessPartner">Business Partner</string>
    <string name="Profile">Profile</string>
    <string name="SalesAgent">Sales Agent</string>
    <string name="RejectionReasons">Rejection Reasons</string>
    <string name="NumOfEmployee">Num Of Employee</string>
    <string name="LeadsNeeds">Leads Needs</string>
    <string name="Position">Position</string>
    <string name="ImplementStrategy">Implement Strategy</string>
    <string name="EvaluationTime">Evaluation Time</string>
    <string name="Em_Opcrm_fin_Pay_Id">Finantial Payment</string>
    <string name="Nationality">Nationality</string>
    <string name="RelatedActivity"><a href="http://www.google.com">Related Activities</a></string>
    <string name="RelatedCases"><a href="http://www.google.com">Related Cases</a></string>
    <string name="UsersassignedTo"><a href="http://www.google.com">Users assigned To</a></string>
    <string name="RelatedOpportunities"><a href="http://www.google.com">Related Opportunities</a></string>
    <string name="IntrestedIn">IntrestedIn</string>
    <string name="RelatedLead">Related Lead</string>


    <string name="Leads">Leads</string>
    <string name="Activities">Activities</string>
    <string name="Cases">Cases</string>
    <string name="Opportunity">Opportunity</string>
    <string name="ConfigrationSystem">Configration System</string>


    <string name="title_activity_main2">Lead Profile</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Related</string>
    <string name="title_section3">Users</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_login">Enterprise OS</string>

    <!-- Strings related to login -->
    <string name="user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing user name
        completions."
    </string>

    <string name="English">EN</string>
    <string name="Arabic">ع</string>


    <!-- Strings of Recording a call -->

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_Enable_record">Enable Record</string>
    <string name="menu_Disable_record">Disable Record</string>
    <string name="title_activity_main_record_call">Call recorder for android</string>
    <string name="list_play_your_recordeed_call">play your recorded call</string>
    <string name="list_send_your_recordeed_call">send your recorded call</string>
    <string name="list_erase_your_recordeed_call">erase your recorded call</string>
    <string name="receiver_start_call">Start record call</string>
    <string name="receiver_end_call">End Record call</string>
    <string name="confirm_delete_title">Call deletion</string>
    <string name="confirm_delete_text">Are you sure you want to delete this recording?</string>
    <string name="confirm_delete_yes">yes</string>
    <string name="confirm_delete_no">no</string>
    <string name="options_title">Recording options</string>
    <string name="options_delete">Delete</string>
    <string name="confirm_play">Play</string>
    <string name="confirm_send">Send</string>
    <string name="sendMail_subject">Your record from your phone</string>
    <string name="sendMail_body">This is a call record from your phone</string>
    <string name="about_title">About</string>
    <string name="about_content">Call recorder by Kobi Krasnoff and Raul Robledo</string>
    <string name="about_close_button">Close</string>
    <string name="send_mail">Send Mail</string>
    <string name="withheld_number">Withheld Number</string>
    <string name="menu_record_is_now_enabled">Call recording enabled</string>
    <string name="menu_record_is_now_disabled">Call recording disabled</string>
    <string name="no_records_message">There are no recordings in this phone.\nTo enable record ability open the main menu and choose \"Enable call recording\".\nAfter that the application will record all your incoming and outgoing calls.</string>
    <string name="radio_Enable_record">Enable call recording</string>
    <string name="radio_Disable_record">Disable call recording</string>
    <string name="textview_startup">Please choose if the application should record your calls.\nYou can always enable or disable recording by pressing the Android menu button.</string>
    <string name="dialog_welcome_screen">Welcome Screen</string>
    <string name="dialog_no_memory">There is no memory card in your device.\nPlease install one.</string>
    <string name="dialog_close">Close</string>
    <string name="menu_terms">Terms of use</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="dialog_terms">Terms of use</string>
    <string name="dialog_privacy">Privacy Policy</string>
    <string name="dialog_privacy_terms">Please click the buttons below to see the terms of use and privacy policy</string>
    <string name="menu_delete_all">Delete All recordings</string>
    <string name="dialog_delete_all_title">Delete everything?</string>
    <string name="dialog_delete_all_content">Are you sure you want to delete all of your recordings?</string>
    <string name="dialog_delete_all_yes">Yes</string>
    <string name="dialog_delete_all_no">No</string>
    <string name="notification_ticker">Recording is now Starting</string>
    <string name="notification_title">The phone is now on a call</string>
    <string name="notification_text">If recording was enabled, recording should have started, if not you can enable recording in the application, the phone will stop the recording when the conversation ends</string>
    <string name="record_impossible">Unfortunately, it is not possible to record calls in this device. (Usually because another application/service is using the microphone in the background)</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main5">Main5Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
