<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFF"
    android:layout_height="match_parent">

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dip"
       android:id="@+id/leadLinear"
       android:background="#FFF"
       >
                <LinearLayout
                    android:id="@+id/Profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:id="@+id/liner5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:weightSum="3"        >

                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Name"
                            android:textColor="@color/primary"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            />
                        <EditText
                            android:id="@+id/editText4"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/primary"
                            android:inputType="text"
                            android:focusable="false"
                            android:textSize="16sp"
                            android:editable="false"
                            android:textAlignment="center"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/liner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:weightSum="3"        >

                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Email"
                            android:textColor="@color/primary"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            />
                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="0dp"
                            android:layout_weight="1.8"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/primary"
                            android:inputType="textEmailAddress"
                            android:editable="false"
                            android:focusable="false"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            />
                        <ImageView
                            android:id="@+id/mail"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/mail"
                            android:layout_weight=".16"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/liner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:weightSum="3"        >

                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Phone"
                            android:textColor="@color/primary"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:id="@+id/telephone"
                            />
                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="0dp"
                            android:layout_weight="1.8"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/primary"
                            android:inputType="phone"
                            android:editable="false"
                            android:focusable="false"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            />
                        <ImageView
                            android:id="@+id/imgedit1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/phone"
                            android:layout_weight=".16"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/liner4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:weightSum="3"        >


                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Address"
                            android:textColor="@color/primary"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            />
                        <EditText
                            android:id="@+id/editText1"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/primary"
                            android:editable="false"
                            android:focusable="false"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liner3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        >
                        <LinearLayout
                            android:id="@+id/liner6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"        >

                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/LeadSource"
                            android:textColor="@color/primary"
                           android:layout_weight="1"
                            android:layout_marginTop="5dp"

                            />
                            <EditText
                                android:id="@+id/editText5"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/primary"
                                android:editable="false"
                                android:focusable="false"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/liner7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"        >
                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/LeadStatus"
                            android:textColor="@color/primary"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"

                            />
                            <EditText
                                android:id="@+id/editText6"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/primary"
                                android:editable="false"
                                android:focusable="false"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                />

                            </LinearLayout>
                        <LinearLayout
                            android:id="@+id/liner8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"        >
                        <TextView
                            android:textSize="16sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/AssignedTo"
                            android:textColor="@color/primary"
                           android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            />
                            <EditText
                                android:id="@+id/editText7"
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/primary"
                                android:editable="false"
                                android:focusable="false"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                />

                            </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

    </LinearLayout>
</ScrollView>